logs/tater.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tater'...
Listing './lib/python3.5/site-packages/tater/base'...
Listing './lib/python3.5/site-packages/tater/base/lexer'...
Listing './lib/python3.5/site-packages/tater/base/node'...
Compiling './lib/python3.5/site-packages/tater/base/node/__init__.py'...
***   File "./lib/python3.5/site-packages/tater/base/node/__init__.py", line 286
    print offset * ' ', '-', self
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tater/base/visitor'...
Listing './lib/python3.5/site-packages/tater/core'...
Listing './lib/python3.5/site-packages/tater/ext'...
Compiling './lib/python3.5/site-packages/tater/ext/legal.py'...
***   File "./lib/python3.5/site-packages/tater/ext/legal.py", line 6
    re_enum = re.compile(ur'\s*([\d\w\-\–\.\u2013]+)')
                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tater/utils'...
Compiling './lib/python3.5/site-packages/tater/utils/lazylist.py'...
***   File "./lib/python3.5/site-packages/tater/utils/lazylist.py", line 141
    print fibs[0], fibs[1], fibs[2], primes[0], primes[1], primes[2]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tater-0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
